java/java-tests/testData/inspection/migrateFromJavaLangIo/beforePrintUnresolved.java
void main() {
<error descr="Cannot resolve symbol 'IO'">IO<caret></error>/*some*/.print(/*some2*/"Hello");
}
